feat: Create a product listing route
