# src/main/routes/products.routes.ts
@@ -6,5 +6,6 @@ router.post('/create', ProductsController.create);
 router.get('/list-all', ProductsController.listAll);
 router.delete('/delete/:code', ProductsController.delete);
 router.put('/update/:code', ProductsController.update);
+router.get('/list-one/:code', ProductsController.listOne);
 
 export default router;
